# django-scidatacontainer

./: .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codecov.yml  django.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  rest.rst
licenses/: bootstrap.md  jquery.md  popper.md
scidatacontainer_db/: admin.py  api_views.py  apps.py  models.py  parsers.py  serializers.py  test_utils.py  utils.py  views.py
scidatacontainer_db/migrations/: 0001_initial.py
scidatacontainer_db/static/scidatacontainer_db/js/: drag-drop.js
scidatacontainer_db/templates/scidatacontainer_db/: detail.html  navbar.html  pagination.html  update_permissions.html
scidatacontainer_db/tests/: __init__.py  example.zdc  example_faulty.zdc  example_faulty_id.zdc  example_replaces.zdc  example_static.zdc  example_update.zdc  example_version.zdc  example_wo_author.zdc  example_wo_complete.zdc  test_api_authentication.py  test_api_dataset_detail.py  test_api_dataset_list.py  test_api_overview.py  test_api_patch_dataset.py  test_containerType.py  test_dataset.py  test_dataset_permissions.py  test_file.py  test_keyword.py  test_model_versions.py  test_software.py  test_ui_authentication.py  test_ui_detail.py  test_ui_keys.py  test_ui_update_permission.py
src/scidatacontainer_db/: api_views.py  models.py  parsers.py  serializers.py  test_utils.py  urls.py
src/scidatacontainer_db/migrations/: 0001_initial.py
src/scidatacontainer_db/static/scidatacontainer_db/css/: drag-drop.css
src/scidatacontainer_db/static/scidatacontainer_db/js/: apikeys.js
src/scidatacontainer_db/templates/rest_framework/: api.html
src/scidatacontainer_db/templates/scidatacontainer_db/: apikeys.html  base.html  detail.html  index.html  invalidation_modal.html  login.html  menu.html  messages.html  update_permissions_groups.html  update_permissions_users.html
src/scidatacontainer_db/tests/: __init__.py  example.zdc  example_faulty.zdc  example_faulty_id.zdc  example_replaces.zdc  example_static.zdc  example_update.zdc  example_version.zdc  example_wo_author.zdc  example_wo_complete.zdc  test_api_dataset_detail.py  test_api_dataset_list.py  test_api_download_file.py  test_api_file_list.py  test_api_overview.py  test_api_patch_dataset.py  test_api_upload_file.py  test_client_lib.py  test_dataset.py  test_dataset_permissions.py  test_model_versions.py  test_parsers.py  test_software.py  test_test_uuids.py  test_ui_detail.py  test_ui_download_file.py  test_ui_index.py  test_ui_update_permission.py  test_ui_upload_file.py
