[metadata]
name = django-scidatacontainer
version = 0.1
description = A Django webserver to handle SciDataConatiner.
long_description = file: README.md
url = https://github.com/SciDataContainer/django-scidatacontainer
author = Sven Kleinert
author_email = sven.kleinert@phoenixd.uni-hannover.de
license = AGPL-3.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.1.3
    django-filter >= 22.1
    django-guardian >= 2.4.0
    djangorestframework >= 3.14.0
    django-rest-knox >= 4.2.0
    packaging >= 23.0
    python-magic >= 0.4.27
    SciDataContainer >= 1.0.0
